ADD_SUBDIRECTORY(dylan)
ADD_SUBDIRECTORY(inspector)
ADD_SUBDIRECTORY(random)
ADD_SUBDIRECTORY(streams)
ADD_SUBDIRECTORY(tk)
ADD_SUBDIRECTORY(print)
ADD_SUBDIRECTORY(table-extensions)
ADD_SUBDIRECTORY(standard-io)
ADD_SUBDIRECTORY(format)
ADD_SUBDIRECTORY(format-out)
ADD_SUBDIRECTORY(debugger-format)
ADD_SUBDIRECTORY(stream-extensions)
ADD_SUBDIRECTORY(string-extensions)
ADD_SUBDIRECTORY(collection-extensions)
ADD_SUBDIRECTORY(regular-expressions)
ADD_SUBDIRECTORY(base-file-system)
ADD_SUBDIRECTORY(io)
ADD_SUBDIRECTORY(parse-arguments)
ADD_SUBDIRECTORY(matrix)
ADD_SUBDIRECTORY(transcendental)
IF (NOT WIN32)
  FILE(GLOB dbcs "${CMAKE_BINARY_DIR}/${MINDY_LIB_DIR}/*.dbc")
  INSTALL(FILES ${dbcs} DESTINATION ${CMAKE_INSTALL_PREFIX}/${MINDY_LIB_DIR})
ENDIF()
