ADD_SUBDIRECTORY(dylan)
ADD_SUBDIRECTORY(io)
ADD_SUBDIRECTORY(inspector)
ADD_SUBDIRECTORY(random)
ADD_SUBDIRECTORY(tk)
ADD_SUBDIRECTORY(table-extensions)
ADD_SUBDIRECTORY(debugger-format)
ADD_SUBDIRECTORY(stream-extensions)
ADD_SUBDIRECTORY(string-extensions)
ADD_SUBDIRECTORY(collection-extensions)
ADD_SUBDIRECTORY(regular-expressions)
ADD_SUBDIRECTORY(base-file-system)
ADD_SUBDIRECTORY(parse-arguments)
ADD_SUBDIRECTORY(matrix)
ADD_SUBDIRECTORY(transcendental)
